# neurolab_autoresearch

./: .gitignore  CLAUDE.md  README.md  autoloop.py  dashboard.py  evaluate.py  experiment.md  mcp_config.json  monitor.py  ollama_agent.py  program.md  pyproject.toml  results.tsv  search_server.py  train.py
