[project]
name = "alphabrain-autoresearch"
version = "0.1.0"
description = "Autonomous SSL experiment loop for Alphabrain (Mac MPS)"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "transformers>=4.40.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.3.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]
